# pro-ndf

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run-claude.ps1  tests.py
.devcontainer/: Dockerfile  devcontainer.json
datasets/: __init__.py
datasets/DNS_ROM/: __init__.py  make_dataset.py  notes.md
datasets/HOIP/: __init__.py  make_dataset.py  notes.md
datasets/borehole/: __init__.py  make_dataset.py  notes.md
datasets/rational/: __init__.py  make_dataset.py  notes.md
datasets/wing_weight/: __init__.py  make_dataset.py  notes.md
notebooks/: __init__.py  b3_weight_sharing_interp.ipynb
src/prondf/: __init__.py  act_fns.py  blocks.py  data.py  loggers.py  losses.py  models.py  optimizers.py  plotting.py  utils.py
